syntax = "proto3";

package greet;

option java_package = "com.github.haroldjcastillo.proto.greet";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server streaming
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {};

  // Client streaming
  rpc LongGreet(stream GreetRequest) returns (GreetResponse) {};

  // BiDi Streaming
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse) {};

  // Greet with deadline
  // This RPC will complete in no less than 300 ms
  rpc GreetWithDeadline(GreetRequest) returns (GreetResponse) {};
}